--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <button id="next-btn">Next</button>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
